remove point 4 of the declaration and memorise checked

--- a/app/views/forms/education/current-address.html
+++ b/app/views/forms/education/current-address.html
@@ -25,7 +25,7 @@
     {{ govukTextarea({
       name: "current-address",
       id: "current-address",
-      classes: "govuk-!-width-one-third",
+      classes: "govuk-!-width-two-thirds",
       value: data['current-address'],
       label: {
         text: "Enter current address",
