--- a/app/views/forms/education/declaration1.html
+++ b/app/views/forms/education/declaration1.html
@@ -31,19 +31,18 @@
             items: [
               {
                 value: "dec1",
-                text: "I’ve read and understood the council’s admission policy"
+                text: "I’ve read and understood the council’s admission policy",
+                checked: checked("declaration1", "dec1")
               },
               {
                 value: "dec2",
-                text: "the information I’ll give is full and correct"
+                text: "the information I’ll give is full and correct",
+                checked: checked("declaration1", "dec2")
               },
               {
                 value: "dec3",
-                text: "I understand if I give false information you’ll withdraw my application and may take legal action"
-              },
-              {
-                value: "dec4",
-                text: "you won’t process my application unless it’s complete"
+                text: "I understand if I give false information you’ll withdraw my application and may take legal action",
+                checked: checked("declaration1", "dec3")
               }
             ]
           }) }}
