tidy notes in equality form

--- a/app/views/forms/equal-opportunities/age.html
+++ b/app/views/forms/equal-opportunities/age.html
@@ -64,7 +64,7 @@ Age - Equality and diversity
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>As this might should probably be a general form, I've added 0-15. But if they tick this, then we might want not to show the relationship status question and the one about sexual orientation? might just jump to the religion question instead</li>
+      <li>As this should probably be a form for any situation, I've added 0-15 age group. But if they select this, then we might not want to show the relationship status question and the one about sexual orientation? might just jump to the religion question instead</li>
   
   </div>
 {% endblock %}
