--- a/app/views/forms/equal-opportunities/ethnic-origin.html
+++ b/app/views/forms/equal-opportunities/ethnic-origin.html
@@ -293,7 +293,7 @@ Ethnic origin - Equality and diversity
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li><strong>This screen will be a mess without Javascript enabled !!! - we might need a warning</strong></li>
+        <li><strong>This screen will be very hard to read without Javascript enabled! - we probably need a warning</strong></li>
     </ul>
     </div>
 
