--- a/app/views/forms/equal-opportunities/start.html
+++ b/app/views/forms/equal-opportunities/start.html
@@ -32,10 +32,10 @@ Equality and diversity
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li><strong>you would reach that page via a link on the  confirmation page stating: Takes 30 seconds</strong></li>
-    <li>This is based on a document provided by Maureen from Housing</li>
-    <li>Ideally, we would want a questionnaire for the whole council, and probably for this page to be much shorted - content should be checked by Sharon</li>
-    <li>here is an <a href="/forms/equal-opportunities/start1">alternative start page</a></li>
+        <li><strong>you would reach that page via a link on the  confirmation page stating: takes less than 1 minute</strong></li>
+        <li>This is based on a document provided by Maureen from Housing</li>
+        <li>Ideally, we would want a questionnaire for the whole council - content not checked by Sharon yet</li>
+        <li>see a shorter alternative <a href="/forms/equal-opportunities/start1">start page</a></li>
     </ul>
 </div>
 {% endblock %}
