--- a/app/views/forms/equal-opportunities/start1.html
+++ b/app/views/forms/equal-opportunities/start1.html
@@ -34,10 +34,10 @@ Equality and diversity
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li><strong>you would reach that page via a link on the  confirmation page stating: Takes 30 seconds</strong></li>
+    <li><strong>you would reach that page via a link on the  confirmation page stating: takes less than 1 minute</strong></li>
     <li>This is based on a document provided by Maureen from Housing</li>
-    <li>Ideally, we would want a questionnaire for the whole council, and probably for this page to be much shorted - content should be checked by Sharon</li>
-    <li>back to the <a href="/forms/equal-opportunities/start">proposed start page</a></li>
+    <li>Ideally, we would want a questionnaire for the whole council - content not checked by Sharon yet</li>
+    <li>see the longer original <a href="/forms/equal-opportunities/start">start page</a></li>
     </ul>
 </div>
 {% endblock %}
