fix small issue on equality form start

--- a/app/views/forms/equal-opportunities/ethnic-origin.html
+++ b/app/views/forms/equal-opportunities/ethnic-origin.html
@@ -145,8 +145,8 @@ Ethnic origin - Equality and diversity
                 text: "Welsh"
                 },
                 {
-                value: "Gypsy or Traveller",
-                text: "Gypsy or Traveller"
+                value: "Gypsy or Traveler",
+                text: "Gypsy or Traveler"
                 },
                 {
                 value: "Polish",
