--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -20,7 +20,8 @@
                 </h2>
                 </legend>
                 <span id="area-hint" class="govuk-hint govuk-!-margin-bottom-8">
-                Select all that apply.
+                    We use this information for planning purposes. Your choices won't prevent you from bidding for homes in areas you have not selected.<br><br>
+                    Select all that apply.
                 </span>
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                     <h2 class="govuk-fieldset__heading">
@@ -194,17 +195,12 @@
 
     </div>
 </div>
-<div class="UR-notes-box">
-    <h3 class="govuk-heading-s">UR notes:</h3>
-    <ul class="govuk-list govuk-list--bullet">
-    <li>We will add a bit of guidance at the top to explain that this will not affect the possibility to bid in areas they didn't select</li>
-    </ul>
-</div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>can be coded - Giffnock has been added. It was missing from the form and also 3 checkboxes for Neilston</li>
     <li>Select at least one</li>
+    <li>Guidance added at the top</li>
     </ul>
 </div>
 
