--- a/app/views/forms/housing/CBLhomeless-question.html
+++ b/app/views/forms/housing/CBLhomeless-question.html
@@ -24,6 +24,9 @@
             classes: "govuk-fieldset__legend--m"
           }
         },
+        hint: {
+          text: "This means you do not have a permanent place to live."
+        },
         items: [
           {
             value: "yes",
