--- a/app/views/forms/housing/CBLwhat-next.html
+++ b/app/views/forms/housing/CBLwhat-next.html
@@ -18,16 +18,16 @@
 
 
       <h2 class="govuk-heading-m erc-text-blue">What happen next</h2>
-      <p class="govuk-!-margin-bottom-9">This is where we will layout the process, what documentation they need, timeline and set expectations ...
-          <ul class="govuk-list govuk-list--bullet"></ul>
-          
-      </p>
+          <p>We will:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>assess your priority for housing within 21 working days of receiving your form if we have all the information needed</li>
+            <li>confirm your Priority Pass and that you have been added to the housing register</li>
+            <li>explain how to bid for available properties</li>
+            <li>invite you to discuss your options and chances of being housed by us</li>
+          </ul>
 
-<p class="govuk-!-margin-bottom-9 govuk-!-margin-top-9">&nbsp;</p>
-
-      <h2 class="govuk-heading-m govuk-!-margin-top-3">Related information </h2>
+      <h2 class="govuk-heading-m govuk-!-margin-top-9">Related information </h2>
       <ul class="govuk-list">
-        <li><a href="/forms/housing/CBLwhat-next.html">What happen next</a></li>
         <li><a href="https://www.eastrenfrewshire.gov.uk/article/1628/Homelessness" target="_blank">Homelessness</a></li>
         <li><a href="https://www.eastrenfrewshire.gov.uk/young-persons-housing-service" target="_blank">Young person's housing support service</a></li>
         <li><a href="https://www.eastrenfrewshire.gov.uk/sheltered-housing" target="_blank">Sheltered housing</a></li>
