--- a/app/views/forms/housing/CBLdeclaration1.html
+++ b/app/views/forms/housing/CBLdeclaration1.html
@@ -50,7 +50,7 @@
     <ul class="govuk-list govuk-list--bullet">
     <li>flow changed: monitor info is removed</li>
     <li>word changed: of East Renfrewshire, instead of 'or'</li>
-    <li>this is now just a yes no question, if yes, goes to another screen where we will collect more details</li>
+    <li>this is now just a yes no question, if yes, goes to another screen where we will collect more details, and no goes to abuse question</li>
     </ul>
 </div>
 
