--- a/app/views/forms/housing/CBLextra-reason-abuse.html
+++ b/app/views/forms/housing/CBLextra-reason-abuse.html
@@ -71,7 +71,7 @@ Health, care, social and support needs
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
-          href: "/forms/housing/CBLhouse-type.html"
+          href: "/forms/housing/CBLextra-reason-medical.html"
         }) }}
       </form>
 
@@ -80,6 +80,7 @@ Health, care, social and support needs
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <p><strong>guidance added if they say yes to the police question</strong></p>
+    <p>routing changed, now before medical</p>
 </div>
 
 
