--- a/app/views/forms/housing/CBLwho-moving.html
+++ b/app/views/forms/housing/CBLwho-moving.html
@@ -32,7 +32,7 @@
           name: "people-details",
           value: data['people-details'],
           label: {
-            text: "Tell us about anyone not moving with you: their name, date of birth and relationship to you"
+            text: "Tell us about anyone NOT moving with you: their name, date of birth and relationship to you"
           }
         }) }}
         {% endset %}
