--- a/app/views/forms/housing/CBLextra-reason-medical.html
+++ b/app/views/forms/housing/CBLextra-reason-medical.html
@@ -74,7 +74,7 @@ Health, care, social and support needs
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
-          href: "/forms/housing/CBLextra-reason-abuse.html"
+          href: "/forms/housing/CBLend.html"
         }) }}
 
     </div>
@@ -82,5 +82,6 @@ Health, care, social and support needs
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <p><strong>guidance added if they say no to the medical form question</strong></p>
+    <p>routing changed now after the abuse question - so it's closer to the end and the guidance is still in mind.</p>
 </div>
 {% endblock %}
