--- a/app/views/forms/housing/CBLreasons.html
+++ b/app/views/forms/housing/CBLreasons.html
@@ -179,7 +179,7 @@
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
-          href: "/forms/housing/CBLextra-reason-medical.html"
+          href: "/forms/housing/CBLhouse-type.html"
         }) }}
       
 
@@ -190,7 +190,8 @@
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>agreed by Housing, - need at least one checked: Select at least one reason (error message to be agreed by Sharon) - or need to have a text in the "Other" textbox</li>
-    </ul>
+    <li>routing changed: now going to house type instead of medical question</li>    
+</ul>
 </div>
 
 {% endblock %}
