--- a/app/views/forms/housing/CBLconfirmation-post.html
+++ b/app/views/forms/housing/CBLconfirmation-post.html
@@ -49,7 +49,13 @@
               <p class="govuk-!-margin-bottom-9">Could you complete our <a href="/forms/equal-opportunities/start1.html">Equality and diversity questionnaire</a>? (takes less than 1 minute)</p>
           
               <h3 class="govuk-heading-m">What happens next</a></h3> 
-              <p>high level points will be drafted here?</p>
+              <p>We will:</p>
+              <ul class="govuk-list govuk-list--bullet">
+                <li>assess your priority for housing within 21 working days of receiving your form if we have all the information needed</li>
+                <li>confirm your Priority Pass and that you have been added to the housing register</li>
+                <li>explain how to bid for available properties</li>
+                <li>invite you to discuss your options and chances of being housed by us</li>
+              </ul>
     
             
         <p class="govuk-!-margin-bottom-1">&nbsp;</p>
