--- a/app/views/forms/housing/CBLcurrent-address.html
+++ b/app/views/forms/housing/CBLcurrent-address.html
@@ -8,7 +8,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">NEW - WORK IN PROGRESS</span>
+            Apply online for council housing <span class="UR-tag red">NEW</span>
         </h1>
 
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
@@ -107,7 +107,7 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>possible way to start asking for 5 years of addresses. We give more explanations on this page so the user understand how this work for the other addresses? on the next we ask for past addresses?</li>
+    <li>possible way to start asking for 5 years of addresses. We give more explanations on this page so the user understand how this work for the other addresses. On the next we ask for past addresses</li>
     <li>as we don't ask for a precise date with 3 boxes anymore, we can't test if they have been at this address for more than 5 years so can't by pass the next page...</li>
     </ul>
 </div>
