--- a/app/views/forms/housing/amendment/start.html
+++ b/app/views/forms/housing/amendment/start.html
@@ -24,7 +24,7 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>your Housing application number</li>
         <li>your new address (if applicable)</li>
-        <li>the name and of date of birth of person to add or remove (if applicable)</li>
+        <li>the name and date of birth of person to add or remove (if applicable)</li>
       </ul>
       <p>
      
