--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -23,7 +23,7 @@
         <li><a href="equal-opportunities/start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equality and diversity</a><br>Based on Housing document<br> <strong class="govuk-tag info">last update:</strong>  <strong>13/12 morning</strong></li><br>
         <li><a href="housing/members-household/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Members of household - for Housing</a><br>First draft - for illustration only - should be one question per page<br> <strong class="govuk-tag info">last update:</strong>  <strong>2/12 evening</strong></li><br>
         <li><a href="housing/medical/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Medical priority - for Housing</a><br>First draft - for illustration only<br> <strong class="govuk-tag info">last update:</strong>  <strong>9/12 afternoon</strong></li><br>
-        <li><a href="housing/amendment/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Amendment - for Housing</a><br>First draft - for illustration only - under construction - only change of name coded for now<br> <strong class="govuk-tag info">last update:</strong>  <strong>15/12 morning</strong></li><br>
+        <li><a href="housing/amendment/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Amendment - for Housing</a><br>First draft - for illustration only - under construction - only change of name, and remove person coded for now<br> <strong class="govuk-tag info">last update:</strong>  <strong>16/12 morning</strong></li><br>
       </ul>
 
     </div>
